Add sketchy Tramper details

--- a/_posts/2014-02-06-tramper.md
+++ b/_posts/2014-02-06-tramper.md
@@ -3,7 +3,11 @@ layout: post
 title:  Tramper
 location: Trampery, Clerkenwell
 speakers:
- - Matt (x3)
+ - PXG - Ember
+ - Pete - Shopify / Liquid Templates
+ - Davy - Leap Motion API
+ - Henry - Dokku / Docker self-help group
+ - Matt - D3
 ---
 
-No idea what happened here. Matt Collins spoke 3 times. But we have no notes.
+No notes!
